--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "@types/react": "^17.0.39",
-        "react-router-dom": "^6.2.1"
+        "@types/ziggy-js": "^1.3.1",
+        "react-router-dom": "^6.2.1",
+        "ziggy-js": "^1.4.3"
     }
 }
