--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
         "typescript": "^4.5.5"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/react-fontawesome": "^0.1.17",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.0",
         "@types/react": "^17.0.39",
         "@types/ziggy-js": "^1.3.1",
         "react-router-dom": "^6.2.1",
+        "react-select": "^5.2.2",
         "ziggy-js": "^1.4.3"
     }
 }
